hphp/hack/test/typecheck/elvis_space.php.exp
File "elvis_space.php", line 4, characters 10-18:
An Elvis operator `?:` is expected here. (Parsing[1002])
