hphp/hack/test/typecheck/elvis_space.php
<?hh // partial

function test($a, $b) {
  return $a ? : $b;
}
